--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <p> </p>
             </div>
             <div class = "col-md-6">
-                <h4 class = "timeRemainingDiv">Time Remaining: 8</h4>
+                <h4 class = "timeRemainingDiv">Time Remaining: 12</h4>
             </div>
         </div>
     </div>
@@ -59,7 +59,7 @@
                 <p> </p>
             </div>
             <div class = "col-md-8">
-                <h4 class = "questionDiv">Question Here</h4>
+                <h4 class = "questionDiv"></h4>
             </div>
         </div>
     </div>
